# quick_draw

./: .gitignore  README.md  main.py  pyproject.toml
backend/: api.py  app.py  classes.json  config.py  game_logic.py  ml_utils.py  plot_utils.py  plotting_api.py  quickdraw.db  radar_chart_auto.py  redis_utils.py  umap_api_helper.py  umap_auto.py
backend/feature/: background_Umap.csv  background_embedding_5per_class.csv  metsnk3z_results.csv  umap_premake.ipynb
backend/model/: doodleNet-model.keras
frontend/: index.html  score.css  score.html  score.js  score_style.css  sketch-original.js  sketch.js  sketch_style.css  utils.js
